--- a/pkg.info/package.json
+++ b/pkg.info/package.json
@@ -23,12 +23,20 @@
   },
   "publish": {
     "current": {
-      "comment": "initial version (most (but not all) toolchains have been verified)",
-      "version": "0.1.0",
-      "date": "Wed Feb 22 00:40:08 2023",
-      "timestamp": 1677026408,
+      "comment": "Add toolchain for RP2040-Wireless. Update Windows Host toolchains to use response files (to avoid 8K Windoze limit)",
+      "version": "0.1.1",
+      "date": "Thu Feb 23 18:23:44 2023",
+      "timestamp": 1677176624,
       "changes": null
     },
-    "history": []
+    "history": [
+      {
+        "comment": "initial version (most (but not all) toolchains have been verified)",
+        "version": "0.1.0",
+        "date": "Wed Feb 22 00:40:08 2023",
+        "timestamp": 1677026408,
+        "changes": null
+      }
+    ]
   }
 }
