--- a/pkg.info/package.json
+++ b/pkg.info/package.json
@@ -23,13 +23,20 @@
   },
   "publish": {
     "current": {
-      "comment": " 1. Add STM32 toolchains. 2. Add ninja executables to the repo. 3. add ability to invoke the ninja 'deps' tool. 4. Add support to clean 'legacy' derived object when migrating to NQBP2",
-      "version": "0.1.3",
-      "date": "Mon Apr 24 22:48:00 2023",
-      "timestamp": 1682376480,
+      "comment": "Add some support the 'ratt' test tool",
+      "version": "0.1.4",
+      "date": "Sun Apr 30 22:51:00 2023",
+      "timestamp": 1682895060,
       "changes": null
     },
     "history": [
+      {
+        "comment": " 1. Add STM32 toolchains. 2. Add ninja executables to the repo. 3. add ability to invoke the ninja 'deps' tool. 4. Add support to clean 'legacy' derived object when migrating to NQBP2",
+        "version": "0.1.3",
+        "date": "Mon Apr 24 22:48:00 2023",
+        "timestamp": 1682376480,
+        "changes": null
+      },
       {
         "comment": "1. Add missing header paths to the PI Pico toolchains. 2. Update documentation",
         "version": "0.1.2",
