--- a/pkg.info/package.json
+++ b/pkg.info/package.json
@@ -23,13 +23,20 @@
   },
   "publish": {
     "current": {
-      "comment": "Add more toolchains and other support for the KIT Library",
-      "version": "1.1.0",
-      "date": "Fri Jan  2 19:59:01 2026",
-      "timestamp": 1767383941,
-      "changes": "\"1) Added new toolchains\\n  1.1) Linux Host\\n\\t1.1.1) Raspberry PI Pico, sdk-2.x (RP2xxx)\\n\\t1.1.2) ARM Cross compiler for STM32\\n  1.2) Windows\\n\\t1.2.1) Raspberry PI Pico, sdk-2.x (RP2xxx)\\n\\t1.2.2) Clang Host with msvc backend\\n2) Added new/alternate FSM support using Plant UML and StateSmith\\n3) Added Code Coverage support for Kit Library using LCOV\\n4) Minor clean-up\\n5) Added more pattern filters to chuck.py\\n6) Added sancho.py script for more VSCode integration\""
+      "comment": "Tweaks/clean-up to the sancho.py script",
+      "version": "1.1.1",
+      "date": "Sat Jan  3 22:04:41 2026",
+      "timestamp": 1767477881,
+      "changes": null
     },
     "history": [
+      {
+        "comment": "Add more toolchains and other support for the KIT Library",
+        "version": "1.1.0",
+        "date": "Fri Jan  2 19:59:01 2026",
+        "timestamp": 1767383941,
+        "changes": "\"1) Added new toolchains\\n  1.1) Linux Host\\n\\t1.1.1) Raspberry PI Pico, sdk-2.x (RP2xxx)\\n\\t1.1.2) ARM Cross compiler for STM32\\n  1.2) Windows\\n\\t1.2.1) Raspberry PI Pico, sdk-2.x (RP2xxx)\\n\\t1.2.2) Clang Host with msvc backend\\n2) Added new/alternate FSM support using Plant UML and StateSmith\\n3) Added Code Coverage support for Kit Library using LCOV\\n4) Minor clean-up\\n5) Added more pattern filters to chuck.py\\n6) Added sancho.py script for more VSCode integration\""
+      },
       {
         "comment": "Minor updates to better support CI environements (on Windozes boxes)",
         "version": "1.0.1",
